# noter

./: .gitignore  README.md  pyproject.toml
noter_gpt/: batch_summarizer.py  cli.py  database.py  document_embedder.py  embedder.py  searcher.py  server.py  storage.py  summarizer.py
noter_gpt/database/: annoy_database.py  inject.py  interface.py
noter_gpt/embedder/: inject.py  interface.py  openai_embedder.py  transformers_embedder.py
noter_gpt/searcher/: inject.py  interface.py  native_searcher.py  ripgrep_searcher.py  utils.py
noter_gpt/static/css/: note.css
noter_gpt/static/js/: note.js
noter_gpt/summarizer/: bart_summarizer.py  batch_summarizer.py  constants.py  falconsai_summarizer.py  gemma_summarizer.py  inject.py  interface.py  local_summarizer.py  long_t5_summarizer.py  openai_summarizer.py  pipeline_summarizer.py  util.py
noter_gpt/templates/: index.html  note.html
tests/: conftest.py  file_hashes.json  pytest.ini  test_cli.py  test_database.py  test_embedder.py  test_searcher.py  test_summarizer.py
tests/data/notes/: car.txt  japan.txt  wiki.txt
tests/data/notes/people/: elon.txt
tests/data/notes/websites/: google.txt
tests/notes/: canada.txt  car.txt  cat.txt  dog.txt  facebook.txt  google.txt  japan.txt  plane.txt  united_states.txt  wiki.txt  youtube.txt
